<resources>
    <string name="app_name">2022-02 Domingo2 G-04</string>
    <string name="txt_grupo">Domingo2 G-04</string>

    <string name="txt_registro_de_alumno">Registro de Alumno</string>
    <string name="txt_registro_de_autor">Registro de Autor</string>
    <string name="txt_registro_de_editorial">Registro de Editorial</string>
    <string name="txt_registro_de_libro">Registro de Libro</string>
    <string name="txt_registro_de_proveedor">Registro de Proveedor</string>
    <string name="txt_registro_de_revista">Registro de Revista</string>
    <string name="txt_registro_de_sala">Registro de Sala</string>
    <string name="txt_registro_de_usuario">Registro de Usuario</string>

    <string name="txt_consulta_de_alumno">Consulta de Alumno</string>
    <string name="txt_consulta_de_autor">Consulta de Autor</string>
    <string name="txt_consulta_de_editorial">Consulta de Editorial</string>
    <string name="txt_consulta_de_libro">Consulta de Libro</string>
    <string name="txt_consulta_de_proveedor">Consulta de Proveedor</string>
    <string name="txt_consulta_de_revista">Consulta de Revista</string>
    <string name="txt_consulta_de_sala">Consulta de Sala</string>
    <string name="txt_consulta_de_usuario">Consulta de Usuario</string>

    <string name="txt_crud_de_alumno">Mantenimiento Alumno</string>
    <string name="txt_crud_de_autor">Mantenimiento Autor</string>
    <string name="txt_crud_de_editorial">Mantenimiento Editorial</string>
    <string name="txt_crud_de_libro">Mantenimiento Libro</string>
    <string name="txt_crud_de_proveedor">Mantenimiento Proveedor</string>
    <string name="txt_crud_de_revista">Mantenimiento Revista</string>
    <string name="txt_crud_de_sala">Mantenimiento Sala</string>
    <string name="txt_crud_de_usuario">Mantenimiento Usuario</string>

    <string name="txt_menu">Menú</string>
    <string name="txt_menu_alumno">Alumno</string>
    <string name="txt_menu_autor">Autor</string>
    <string name="txt_menu_editorial">Editorial</string>
    <string name="txt_menu_libro">Libro</string>
    <string name="txt_menu_proveedor">Proveedor</string>
    <string name="txt_menu_revista">Revista</string>
    <string name="txt_menu_sala">Sala</string>
    <string name="txt_menu_usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="fecha_creaci_n">Fecha Creación</string>
    <string name="descripci_n_de_modalidad">Descripción de Modalidad</string>
    <string name="modalidad">Modalidad</string>
    <string name="registrar">Registrar</string>
    <string name="revista_consulta_consultar">Consultar</string>
    <string name="im_genes_de_revistas">Imágenes de revistas</string>
    <string name="introduce_un_nombre_de_revista">Introduce un nombre de revista</string>
    <string name="filtrar">Filtrar</string>
    <string name="eliminar_revista">Eliminar Revista</string>
    <string name="eliminar">ELIMINAR</string>


</resources>
