<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".vista.registra.RevistaRegistraActivity">

    <TextView
        android:id="@+id/idTitlePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/txt_registro_de_revista"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt" />

            <TextView
                android:id="@+id/txtFrecuencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt"
                android:text="@string/frecuencia" />

            <EditText
                android:id="@+id/editFrecuencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt" />

            <TextView
                android:id="@+id/txtFechaCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt"
                android:text="@string/fecha_creaci_n" />

            <EditText
                android:id="@+id/editFechaCreacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt" />

            <TextView
                android:id="@+id/txtModalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt"
                android:text="@string/modalidad" />

            <Spinner
                android:id="@+id/spnModalidad"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1pt"
                android:onClick="registerMagazine"
                android:text="@string/registrar" />
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>